<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/title_of_preference_category_auto_go_home">
        <CheckBoxPreference
            android:key="preference.autogohome"
            android:title="@string/label_of_preference_auto_go_home"
            android:defaultValue="false"
            android:summary="@string/summary_of_preference_auto_go_home"/>
        <EditTextPreference
            android:key="preference.autogohome.delaytime"
            android:title="@string/label_of_preference_auto_go_home_delay_time"
            android:defaultValue="5"
            android:editable="true"
            android:enabled="false"
            android:summary="@string/summary_of_preference_auto_go_home_delay_time"/>
    </PreferenceCategory>
</PreferenceScreen>
